--- a/plugin.yml
+++ b/plugin.yml
@@ -9,3 +9,9 @@ commands:
 permissions:
   broadcast.cmd.bcast:
     default: op
+  silverzessentials:
+    description: "About SilverzEssentials"
+    aliases: ["silveress", "se"]
+permissions:
+  se.cmd:
+    default: true
